src/App.css
:root {
  --document-box-shadow: 0px 8px 50px -10px rgb(102, 85, 85);
}

@keyframes pop {
  0% {
    transform: scale(1);
    box-shadow: var(--box-shadow);
  }
  100% {
    transform: scale(var(--scale));
    box-shadow: var(--box-shadow-picked-up);
  }
}

.pdf-merge {
  display: flex;
  flex-direction: column;
  gap: 20px;
  margin: 16px;
}

.dropzone-button {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 15vw;
  height: auto;
  transition: 300ms;

  > #dropzone-label {
    background-color: #316797;
    color: white;
    padding: 5vw;
    text-align: center;
    border-radius: 50%;
    cursor: pointer;
    transition: 300ms ease-in;
    transition-property: transform, box-shadow;
    box-shadow: var(--document-box-shadow);
    position: relative;

    &:hover {
      transform: translateY(0.5vw);
      box-shadow:
        0 0 0 1px rgba(63, 63, 68, 0.05),
        0px 15px 15px 0 rgba(34, 33, 81, 0.25);
    }

    > div {
      display: flex;
      flex-direction: column;
      align-items: center;
      position: absolute;
      left: 50%;
      top: 44%;
      transform: translate(-50%, -50%);

      img {
        width: 3em;
        height: 3em;
      }

      span {
        line-height: 120%;
        font-size: 24px;
      }
    }
  }
}

.dropzone-container {
  display: flex;
  flex: 1;
  flex-direction: column;
  align-items: center;
  border: 2px dashed purple;
  border-radius: 4px;
  padding: 60px;
  transition: border 0.15s ease-in-out;
  text-align: center;
  width: 80%;
  margin: auto;
}

.dropzone-container.dropzone-container-accept {
  border-color: rgb(0, 128, 6);
}

.dropzone-container.dropzone-container-reject {
  border-color: rgb(190, 1, 1);
}

.dropzone-content {
  font-size: 20px;
}

.files-manipulation__container {
  max-width: 90vw;
  width: auto;
  margin: 0 auto;
  position: relative;
}

.preview-container {
  position: relative;
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  gap: 24px;
  padding: 16px;
  border-radius: 12px;
  background-color: #c5dfdf;
}

.preview-container .add-btn-container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.document-container {
  position: relative;
  cursor: grab;
  box-sizing: border-box;
  transform-origin: 0 0;
  touch-action: none;
  width: 15vw;
  height: auto;
  padding: 1.5em;

  .react-pdf__Document {
    display: flex;
    flex-direction: column;
    align-items: center;
    box-shadow: var(--document-box-shadow);

    .react-pdf__Page {
      canvas {
        max-width: 100%;
        height: auto !important;
      }
    }

    .document-label {
      background-color: rgb(202, 202, 202);
      width: 100%;
      padding: 1em 0;
      text-align: center;
      display: flex;
      justify-content: center;
      word-break: break-word;
      word-wrap: break-word;
      > p {
        font-size: 14px;
        margin: 0;
        padding: 0 8px;
      }
    }
  }

  &.is-dragging {
    --scale: 1.05;
    --box-shadow: 0 0 0 1px rgba(63, 63, 68, 0.05),
      0px 15px 15px 0 rgba(34, 33, 81, 0.25);
  }

  .drag-overlay {
    transform: scale(var(--scale, 1));
    box-shadow: var(--box-shadow);
    animation: pop 200ms cubic-bezier(0.18, 0.57, 0.6, 1.22);
  }

  .actions-container {
    position: absolute;
    width: 40px;
    height: 40px;
    left: 1.5em;
    top: 1.5em;
    display: flex;
    justify-content: center;
    align-items: center;

    button {
      background: transparent;
      opacity: 0;
      transition: opacity 200ms;
      border: none;
      cursor: pointer;
      height: 2em;
      width: 2em;

      img {
        width: 100%;
        height: 100%;
      }

      &:hover {
        opacity: 1 !important;
      }
    }
  }
  &:hover {
    button {
      opacity: 0.6;
    }
  }
}

.handle-btns {
  display: flex;
  margin: 0 auto;
  padding: 16px;
  justify-content: space-around;

  .btn {
    width: 200px;
    height: 54px;
    font-size: 24px;
    margin: 0 24px;
    border: none;
    border-radius: 8px;
    cursor: pointer;
  }

  .merge-btn {
    background-color: purple;
    &:hover {
      background-color: rgba(128, 0, 128, 0.9);
    }
  }

  .download-btn {
    background-color: teal;
    display: flex;
    align-items: center;
    justify-content: center;
    color: white;
    &:hover {
      background-color: rgba(0, 128, 128, 0.9);
    }
  }

  .disabled-btn {
    pointer-events: none;
    background-color: #f4e3c2;
    color: #c1c1c1;
  }
}

@media (width <= 620px) {
  .dropzone-container {
    padding: 24px;
  }

  .dropzone-content {
    font-size: 16px;
  }
}

@media (1024px < width <= 1440px) {
  .files-manipulation__container {
    max-width: 1200px;
  }

  .preview-container {
    gap: 16px;
  }

  .dropzone-button {
    > #dropzone-label {
      > div {
        top: 42%;

        img {
          height: 2em;
          width: 2em;
        }

        span {
          font-size: 16px;
        }
      }
    }
  }
}

@media (768px <= width <= 1024px) {
  .files-manipulation__container {
    max-width: 900px;
  }
}

@media (max-width: 1024px) {
  .preview-container {
    border: 3px dashed #316797;
    border-radius: 0;
    gap: 8px;
    padding-top: 24px;
    padding-bottom: 24px;
  }

  .document-container,
  .dropzone-button {
    width: 25vw;
  }

  .document-container {
    padding: 1em;

    .actions-container {
      left: 1em;
      top: 1em;
      width: 32px;
      height: 32px;
    }
  }

  .dropzone-button {
    > #dropzone-label {
      padding: 15vw;

      > div {
        top: 50%;

        span {
          font-size: 28px;
        }
      }
    }
  }
}

@media (576px <= width < 768px) {
  .files-manipulation__container {
    max-width: 600px;
  }
}

@media (max-width: 768px) {
  .document-container,
  .dropzone-button {
    width: 35vw;
    height: auto;
    padding: 0.6em;
  }
}

@media (width < 576px) {
  .files-manipulation__container {
    max-width: 460px;
  }

  .dropzone-button {
    > #dropzone-label {
      padding: 15vw;

      > div {
        top: 50%;
        span {
          font-size: 20px;
        }
      }
    }
  }
}

@media (max-width: 480px) {
  .dropzone-button {
    > #dropzone-label {
      padding: 15vw;

      > div {
        top: 50%;

        img {
          height: 2em;
          width: 2em;
        }

        span {
          font-size: 16px;
        }
      }
    }
  }
}

@media (max-width: 370px) {
  .document-container,
  .dropzone-button {
    width: 40vw;
  }
}

